# redis

./: CMakeLists.txt  redis.conf
src/: Makefile  bitops.c  config.c  config.h  crc64.c  db.c  debug.c  defrag.c  eval.c  function_lua.c  functions.c  functions.h  hyperloglog.c  kvstore.c  kvstore.h  lazyfree.c  module.c  networking.c  object.c  rdb.c  redismodule.h  script.c  server.c  server.h  sort.c  t_hash.c  t_list.c  t_zset.c  util.h
src/commands/: memory-stats.json
tests/modules/: defragtest.c  moduleconfigs.c
tests/support/: server.tcl
tests/unit/: info-keysizes.tcl  other.tcl  scripting.tcl
tests/unit/moduleapi/: crash.tcl  datatype.tcl  moduleconfigs.tcl
